--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <title>Opal Google App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- PWA -->
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1a73e8">
 
-    <!-- Splash -->
     <style>
         body {
             margin: 0;
@@ -20,21 +18,17 @@
             font-family: Arial, sans-serif;
             background: #ffffff;
         }
-        .splash {
-            text-align: center;
-        }
     </style>
 
     <script>
         setTimeout(() => {
-            window.location.href =
-            "https://opal.google/?flow=drive:/1FfpRRvLvrQisT2_zrRlkIKF54egDpUnx&shared&mode=app";
+            window.location.href = "https://opal.google/?flow=drive:/1FfpRRvLvrQisT2_zrRlkIKF54egDpUnx&shared&mode=app";
         }, 1200);
     </script>
 </head>
 <body>
 
-<div class="splash">
+<div>
     <h2>Opal Google</h2>
     <p>Memuat aplikasi...</p>
 </div>
