--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Opal Google App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="manifest" href="manifest.json">
+    <!-- PWA -->
+    <link rel="manifest" href="./manifest.json">
     <meta name="theme-color" content="#1a73e8">
 
     <style>
@@ -20,9 +21,12 @@
         }
     </style>
 
+    <!-- AUTO REDIRECT (ANTI IFRAME BLOCK) -->
     <script>
-        setTimeout(() => {
-            window.location.href = "https://opal.google/?flow=drive:/1FfpRRvLvrQisT2_zrRlkIKF54egDpUnx&shared&mode=app";
+        setTimeout(function () {
+            window.location.replace(
+              "https://opal.google/?flow=drive:/1FfpRRvLvrQisT2_zrRlkIKF54egDpUnx&shared&mode=app"
+            );
         }, 1200);
     </script>
 </head>
@@ -30,12 +34,12 @@
 
 <div>
     <h2>Opal Google</h2>
-    <p>Memuat aplikasi...</p>
+    <p>Memuat aplikasi…</p>
 </div>
 
 <script>
-if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('service-worker.js');
+if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("./service-worker.js");
 }
 </script>
 
